# ntex-practice

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/cache/: Cargo.toml
crates/cache/src/: distribute.rs  error.rs  lib.rs  memory.rs  persistent.rs
crates/cache/src/impls/: distribute.rs  memory.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  error.rs  features.rs  lib.rs  macros.rs  response.rs  utils.rs  view_template.rs
crates/core/src/error/: async_op_guard.rs  impls.rs  internal_error.rs  mod.rs  redis.rs  regex.rs  tls.rs  view_template.rs
crates/env/: Cargo.toml
crates/env/src/: lib.rs
crates/guard/: Cargo.toml
crates/guard/src/: async_op.rs  lib.rs
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: lib.rs  view_template.rs
crates/www/: Cargo.toml  sailfish.toml
crates/www/src/: app.rs  constants.rs  error.rs  lib.rs  openapi.rs  routes.rs
crates/www/src/cache/: distribute.rs  mod.rs
crates/www/src/config/: server.rs
crates/www/src/controllers/: greeting.rs  mod.rs  views.rs
crates/www/src/middlewares/: demo.rs  extensions.rs  globals.rs  mod.rs  prerequisites.rs  view.rs
crates/www/src/middlewares/extensions/: caches.rs  mod.rs
crates/www/src/middlewares/globals/: centralization.rs  mod.rs  normalize_req_path.rs
crates/www/src/models/: controllers.rs
crates/www/src/utils/: extensions.rs  mod.rs  server.rs  tracing.rs
crates/www/templates/: 404.html  500.html  index.html
crates/www/templates/partials/: _meta.html  _metrics.html  _pre_checks.html  _preludes.html
