[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.1"
readme = "README.md"
description = "Learn ntex."
license = "MIT"
categories = ["web server"]
keywords = ["web_server"]

[workspace.dependencies]
web_proc_macros = { path = "./crates/proc_macros" }
web_core = { path = "./crates/core" }
web_www = { path = "./crates/www" }
web_env = { path = "./crates/env" }
ntex = { version = "1.2", features = [
  "tokio",
  "cookie",
  "compress",
], default-features = false }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
] }
dotenvy = { version = "0.15" }
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sailfish = { version = "0.8" }
syn = { version = "2.0", features = ["derive"] }
quote = { version = "1.0" }
once_cell = { version = "1.19" }
serde_urlencoded = { version = "0.7.1" }

