[package]
name = "web_proc_macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
sailfish.workspace = true