[package]
name = "web_www"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
default-run = "server"

[dependencies]
web_core.workspace = true
web_env.workspace = true
web_cache.workspace = true
web_guard.workspace = true
ntex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sailfish.workspace = true
fred.workspace = true
tokio.workspace = true
once_cell.workspace = true
regex.workspace = true
utoipa.workspace = true
utoipa-swagger-ui ={ version = "7" }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }

[[bin]]
name = "server"
path = "bin/server.rs"

[features]
default = []
# default = ["tls-rustls"] # For HTTPS Mode.
tls-rustls = ["dep:rustls", "dep:rustls-pemfile", "web_core/tls-rustls", "ntex/rustls"]
